Version history: 0.82
 * Add hack to make kdebindings build using builddir == srcdir even though
   srcdir is really != builddir.
 * kdecvs-pywizard improvements.

Version history: 0.81
 * Fix use-qt-builddir-hack to work on the second and subsequent runs.
 * Add a warning if you're using qt-copy but qtdir isn't set to use qt-copy

Version history: 0.80
 * Fixed an output quibble discovered by Michal Rokos
 * Added set-env config option.

Version history: 0.77
 * Added inst-apps config option.

Version history: 0.76
 * Added --cvs-only option.
 * Added --build-only option.
 * --help output updates.

Version history: 0.75
 * Add signal handler for SIGPIPE to stop less from aborting the script prematurely.
 * Silence warnings when the script informs you that you're missing the conf file.
 * Try to build modules even if one failed in the update process.
 * Added --rc-file option.
 * Make --debug option use logging in addition to dumping to stdout.

Version history: 0.74
 * Fixed bug processing command line options where --help would call the wrong
   exit routine, leading to some warnings.  I had a fix for this myself, but
   someone sent a (correct) patch, which I couldn't help but to apply.  Thanks
   Kurt!
 * On the same note, the --install option wouldn't work right either because
   we need the conf file to be loaded, but that can't happen until the
   'simple' options like --help, --version, and --author are done.  So now
   options which require an argument set a flag, and the processing is done
   later.
 * Add feature for Amilcar, failed packages will display the path to the
   appropriate log file.
 * Another feature, automatically refresh build system if a Makefile.am is
   added.

Version history: 0.73
 * Added support for timing a build to the program.  Each make attempt is
   timed, along with the install process, and the overall time spent trying to
   install.
 * I can't seem to find a way to separate compilation and linking with