@@ -65,13 +65,21 @@ those who either can't or don't feel like installing it.</p>
 <p id="emailaddy">It is authored by Michael Pyne (mpyne (AT) grammarian (DOT) homelinux 
 (DOT) net), and is one of several build scripts for this purpose.</p>
 
-<p><b>2004-Aug-09:</b> v0.82<br/>
+<p><b>2004-Aug-12:</b> v0.82<br/>
 New features:
 <ul>
 <li>You should no longer get a build error with kdebindings due to the
 argument length being too long.  This is done by using an alternate method
 of implementing builddir != srcdir that isn't quite as nice, but seems to
-work well in practice.  Bug reports on this are appreciated.</li>
+work well in practice.  Bug reports on this are appreciated.  Note that
+kdebindings (at least for me), still refuses to build, even without unsermake,
+but it does get a little farther along.</li>
+<li>kdecvs-pywizard improvements.  It's still nothing super-impressive yet,
+but it now can enable unsermake for you (with certain modules automatically
+having unsermake support disabled), and save the generated file to disk.
+Also, the qt-copy module has better default configure options.</li>
+<li>The valgrind module has the same hack applied to it as kdebindings, so now
+it builds successfully for me.</li>
 </ul>
 
 <p><b>2004-Aug-03:</b> v0.81<br/>
@@ -829,7 +837,7 @@ href="#options">.kdecvs-buildrc options</a>.
 <div align="center" class="thankyou">
 <font size="-1"><a href="http://www.cvsup.org/">CVSup</a> is a registered trademark of John D. Polstra.
 <br/>
-Last modified: Mon Aug  9 02:45:32 2004</font>
+Last modified: Thu Aug 12 22:17:58 2004</font>
 </div>
 </body>
 </html>
