@@ -623,7 +623,7 @@ sub process_arguments
 {
     my $arg;
     my $author = "Michael Pyne <michael.pyne\@kdemail.net>";
-    my $version = "kdecvs-build 0.81\n";
+    my $version = "kdecvs-build 0.82\n";
     my @argv;
 
     while ($_ = shift @ARGV)
