@@ -1,7 +1,10 @@
 Version history: 0.82
  * Add hack to make kdebindings build using builddir == srcdir even though
-   srcdir is really != builddir.
+   srcdir is really != builddir.  Unfortunately, kdebindings still won't
+   build, but it gets a little farther into the build process.
  * kdecvs-pywizard improvements.
+ * Add hack to make valgrind build.  Unlike kdebindings, this one actually
+   completes now.
 
 Version history: 0.81
  * Fix use-qt-builddir-hack to work on the second and subsequent runs.
